Fix awatar width on tablet screen size

--- a/src/components/pages/CommunityPage/CommunityPage.module.css
+++ b/src/components/pages/CommunityPage/CommunityPage.module.css
@@ -493,6 +493,7 @@
     border: 1px solid var(--gray-3-);
     border-radius: 0.75rem;
     display: flex;
+    height: 100%;
   }
   .CommunityMembersMember:hover > div{
     border: 1px solid var(--gray-1-);
